# fastmcp-auth-entraid

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README-v2.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
app/: __main__.py  config.py  main.py
app/auth/: __init__.py  checks.py  verifier.py
app/tools/: health.py  soma.py
docs/: architecture.md
docs/adr/: 0001-dual-auth-modes-jwt-and-oauth-proxy.md  0002-app-roles-over-oauth-scopes.md  0003-structlog-for-observability.md  0004-powershell-for-entra-provisioning.md  0005-reference-server-with-explicit-tool-registration.md  README.md  index.md
scripts/: Provision-McpEntra.ps1  README.md  Remove-McpEntra.ps1  provisioning.md
scripts/modules/: McpEntra.psm1
src/app/: __main__.py  config.py  logging_config.py  server.py
src/app/auth/: __init__.py  oauth_storage.py  verifier.py
src/app/middleware/: __init__.py  audit.py  correlation.py
src/app/tools/: __init__.py  divisao.py  health.py  multiplicacao.py  soma.py  subtracao.py
tests/: conftest.py
tests/integration/: test_factory.py
tests/unit/: test_arithmetic_tools.py  test_audit_middleware.py  test_checks.py  test_config.py  test_correlation_middleware.py  test_logging_config.py  test_oauth_storage.py  test_tool_discovery.py  test_tool_registration.py  test_verifier.py  test_verifier_logging.py
