[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-auth-entraid"
version = "0.1.0"
description = "FastMCP server with Microsoft Entra ID authentication and App Role-based access control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Thiago Rufino" }]
keywords = ["mcp", "fastmcp", "azure", "entra-id", "oauth", "rbac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "fastmcp==3.2.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
lint = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
dev = [
    "fastmcp-auth-entraid[tests,lint]",
    "pip-tools>=7.4",
]

[project.urls]
Repository = "https://github.com/thiagorufino/fastmcp-auth-entraid"
Issues = "https://github.com/thiagorufino/fastmcp-auth-entraid/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pip-tools]
generate-hashes = false
strip-extras = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "SIM",  # simplify
    "S",    # bandit (security)
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TID",  # tidy imports
    "PT",   # pytest style
    "ASYNC",
]
ignore = [
    "PLR0913",  # too many arguments (FastMCP factory pattern)
    "S101",     # asserts are fine
    "TID252",   # relative imports within package are idiomatic Python
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # asserts
    "PLR2004",  # magic numbers in assertions
    "S105",     # hardcoded password strings (test fixtures)
    "S106",     # same
    "PT019",    # underscore fixtures used for side effects are intentional
    "PLC0415",  # imports inside tests are intentional (lazy load)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_reexport = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:mcp.*",
]
